<ScrollView android:layout_height="match_parent"
    android:layout_width="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.univesity.gsalah.unimedia.Fragments.Student.ProfileStd">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center"
        >
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/add_photo"
            android:id="@+id/addphoto_btn"/>
        <ImageView
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:id="@+id/profile_pic"
            android:src="@android:drawable/ic_menu_camera"/>
        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="15dp"
            android:inputType="textPassword"
            android:id="@+id/old_pass"
            android:hint="@string/old_pass"
            android:minWidth="220dp"/>
        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:minWidth="220dp"
            android:id="@+id/new_pass"
            android:hint="@string/new_pass"/>
        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:minWidth="150dp"
            android:layout_margin="10dp"
            android:id="@+id/confirm_new_pass"
            android:hint="@string/confirm_pass"/>
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="30dp"
            android:id="@+id/changepass_btn"
            android:text="@string/change_pass"/>
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/create_cv"/>



    </LinearLayout>
</ScrollView>