<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    tools:context="com.univesity.gsalah.unimedia.Fragments.Lecturer.ProfileLec">

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="15dp"
        android:inputType="textPassword"
        android:id="@+id/old_pass"
        android:hint="@string/old_pass"
        android:minWidth="220dp"/>
    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:minWidth="220dp"
        android:id="@+id/new_pass"
        android:hint="@string/new_pass"/>
    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:minWidth="150dp"
        android:layout_margin="10dp"
        android:id="@+id/confirm_new_pass"
        android:hint="@string/confirm_pass"/>
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="30dp"
        android:id="@+id/changepass_btn"
        android:text="@string/change_pass"/>

</LinearLayout>
