<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:layout_height="match_parent"
    >
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_alignParentLeft="true"
        android:layout_marginLeft="10dp"
        android:padding="5dp">
    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/mark"
        android:inputType="numberDecimal"
        android:id="@+id/mark_etxt"
        android:layout_marginRight="10dp"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/hours"
        android:textStyle="bold"
        android:layout_marginRight="5dp"/>
    <Spinner
        android:layout_width="50dp"
        android:layout_height="wrap_content"
        android:entries="@array/hours"
        android:gravity="center"
        android:id="@+id/hour_spinner"
        android:layout_marginRight="10dp"
        ></Spinner>
    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="numberDecimal"
        android:id="@+id/oldmark_etxt"
        android:hint="@string/old_mark"/>
    </LinearLayout>
</RelativeLayout>