<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:orientation="vertical"
    android:layout_height="match_parent">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:gravity="center"
        android:textSize="25sp"
        android:text="@string/add_mark"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_marginBottom="10dp"
        android:textSize="20sp"
        android:id="@+id/std_name"/>
    <Spinner
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:textAlignment="center"
        android:id="@+id/mark_spinner"
        android:layout_marginBottom="10dp"
        android:entries="@array/mark_types"></Spinner>
    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:minWidth="100dp"
        android:gravity="center"
        android:layout_marginBottom="10dp"
        android:layout_gravity="center"
        android:id="@+id/mark_etxt"
        android:hint="@string/the_mark"
        android:inputType="numberDecimal"/>
    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:minWidth="100dp"
        android:gravity="center"
        android:layout_marginBottom="10dp"
        android:layout_gravity="center"
        android:id="@+id/fullmark_etxt"
        android:hint="@string/the_full_mark"
        android:inputType="numberDecimal"/>
</LinearLayout>