<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:fab="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.univesity.gsalah.unimedia.Activites.Lecturer.MarkDataActivity"
    tools:showIn="@layout/activity_mark_data">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/title_activity_mark_data"
        android:layout_marginBottom="15dp"
        android:textSize="30sp"/>
    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context="com.univesity.gsalah.unimedia.Activites.Lecturer.MarksDataActivity">
        <android.support.v4.widget.SwipeRefreshLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/swipe_refresh">
            <ListView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:id="@+id/listview"></ListView>
        </android.support.v4.widget.SwipeRefreshLayout>

        <com.github.clans.fab.FloatingActionMenu
            android:id="@+id/menu"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignParentRight="true"
            android:layout_marginRight="10dp"
            android:layout_marginBottom="10dp"
            android:layout_marginLeft="10dp"
            fab:menu_fab_size="normal"
            fab:menu_showShadow="true"
            fab:menu_shadowColor="#66000000"
            fab:menu_shadowRadius="4dp"
            fab:menu_shadowXOffset="1dp"
            fab:menu_shadowYOffset="3dp"
            fab:menu_colorNormal="#DA4336"
            fab:menu_colorPressed="#E75043"
            fab:menu_colorRipple="#99FFFFFF"
            fab:menu_animationDelayPerItem="50"
            fab:menu_icon="@drawable/fab_add"
            fab:menu_buttonSpacing="0dp"
            fab:menu_labels_margin="0dp"
            fab:menu_labels_showAnimation="@anim/fab_slide_in_from_right"
            fab:menu_labels_hideAnimation="@anim/fab_slide_out_to_right"
            fab:menu_labels_paddingTop="4dp"
            fab:menu_labels_paddingRight="8dp"
            fab:menu_labels_paddingBottom="4dp"
            fab:menu_labels_paddingLeft="8dp"
            fab:menu_labels_padding="8dp"
            fab:menu_labels_textColor="#FFFFFF"
            fab:menu_labels_textSize="14sp"
            fab:menu_labels_cornerRadius="3dp"
            fab:menu_labels_colorNormal="#333333"
            fab:menu_labels_colorPressed="#444444"
            fab:menu_labels_colorRipple="#66FFFFFF"
            fab:menu_labels_showShadow="true"
            fab:menu_labels_singleLine="false"
            fab:menu_labels_ellipsize="none"
            fab:menu_labels_maxLines="-1"

            fab:menu_labels_position="left"
            fab:menu_openDirection="up"
            fab:menu_backgroundColor="@android:color/transparent"
            fab:menu_fab_label="Type of The Exam"
            >
            <!--fab:menu_labels_style="@style/YourCustomLabelsStyle"
            fab:menu_fab_show_animation="@anim/my_show_animation"
            fab:menu_fab_hide_animation="@anim/my_hide_animation"-->
            <com.github.clans.fab.FloatingActionButton
                android:id="@+id/first_fab"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@android:drawable/ic_input_add"
                fab:fab_size="mini"
                fab:fab_label="@string/first" />
            <com.github.clans.fab.FloatingActionButton
                android:id="@+id/second_fab"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@android:drawable/ic_input_add"
                fab:fab_size="mini"
                fab:fab_label="@string/second" />
            <com.github.clans.fab.FloatingActionButton
                android:id="@+id/midterm_fab"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@android:drawable/ic_input_add"
                fab:fab_size="mini"
                fab:fab_label="@string/midterm" />
            <com.github.clans.fab.FloatingActionButton
                android:id="@+id/final_fab"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@android:drawable/ic_input_add"
                fab:fab_size="mini"
                fab:fab_label="@string/finals" />
            <com.github.clans.fab.FloatingActionButton
                android:id="@+id/activites_fab"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@android:drawable/ic_input_add"
                fab:fab_size="mini"
                fab:fab_label="@string/activites" />

        </com.github.clans.fab.FloatingActionMenu>
    </RelativeLayout>
</LinearLayout>
